@@ -47,7 +47,7 @@ per coroutine, 5k when the experimental context sharing is enabled.
 
 package Coro::State;
 
-no warnings;
+no warnings qw(uninitialized);
 
 BEGIN {
    $VERSION = 0.5;
