@@ -4,6 +4,7 @@ Revision history for Perl extension Coro.
 	- small tweaks (seem to reduce memory consumption a lot)
           in various modules.
         - splendid use of "no warnings" scattered throughout.
+        - added Coro::Handle::unsysread, fixed Coro::Handle::fh.
 
 0.49  Sun Sep 16 02:42:45 CEST 2001
 	- changed some method calls to function calls for speed
